--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,17 +27,21 @@ jobs:
           node-version: 18
           cache: 'npm'
       
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies with clean setup
+        run: |
+          rm -rf node_modules
+          rm -f package-lock.json
+          npm install --production=false
+          ls node_modules/.bin | grep vite  # 检查vite是否安装
       
       - name: Build
-        run: npm run build
+        run: npx vite build  # 使用npx明确调用
       
       - name: Setup Pages
-        uses: actions/configure-pages@v4  # 更新到v4
+        uses: actions/configure-pages@v4
       
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3  # 更新到v3
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
 
@@ -50,4 +54,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4  # 更新到v4
+        uses: actions/deploy-pages@v4
